﻿Changelog
=========

5.1-dev - (unreleased)
----------------------

5.0 - (2012-06-20)
------------------
* Bug fix: fixed rdf dcterms:isReplacedBy (it was set to wrongly to replacedBy)
  [demarant fixes #5129]
* Bug fix: check if results are found for topics on isGeoContainer
  [ichimdav #3355]

4.21 - (2012-06-13)
-------------------
* Change: Images on highlights and articles are now wider and span entire
  content area. this change also fixes some floating layout issues.
  [demarant fixes #5023 refs #4206]
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Bug fix: set effective date to now() when a content item is first published
  [tiberich #5125]
* Feature: use a subscriber to add dcterms:isReplacedBy and dcterms:replaces
  to IVersionEnhanced content
  [tiberich, demarant #5129]
* Upgrade step: in www/portal_properties/site_properties:
  - add quick_event_anonymous_creator property of type string with the name of the user
  that should be the creator of the anonymous quick events
  [ichimdav #4788]
* Upgrade step: with a serviceWWW instance from the root of the site run:
  www/SITE/@@migrate2geotags -- to migrate Events and QuickEvents to geotags
  www/SITE/@@migrate2geotags?type=Organisation -- to migrate Organisation to geotags
  [ichimdav #4788]
* Upgrade step: add an External Method called update_publications_subobjects with:
  module name -  Products.EEAContentTypes.migration_fixes
  function name - update_publications_subobjects
  Execute it
  [ghicaale refs #5178]
* Bug fix: fixed notification.py so PO files can be generated
  [prospchr #5159]
* Bug fix: added migration script to fix some figuretype for some figures
  [tiberich #5082]
* Bug fix: fixed floating issues with related portlets
  [ichimdav #5157]
* Change: geotags migration script is now transaction aware
  [ghicaale refs #4778]
* Bug fix: added body text in cft_listing_view
  [tiberich #5111]
* Upgrade step: add an External Method called fix_categories_maps with: