@@ -10,6 +10,10 @@
   [demarant fixes #5129]
 * Bug fix: check if results are found for topics on isGeoContainer
   [ichimdav #3355]
+* Bug fix: add a validator for max file size in ExternalHighlight and Promotion
+  [tiberich refs #5259]
+* Bug fix: removed usage of isEmpty
+  [tiberich refs #5289]
 
 4.21 - (2012-06-13)
 -------------------
